--- a/geotermia.html
+++ b/geotermia.html
@@ -599,9 +599,9 @@
   </section>
 </main>
 
-
-  <!-- Contacto -->
-  <section id="contacto" class="mb-5 py-4 rounded" style="background-color: #f4f4f4;">
+<!-- Contacto -->
+<section id="contacto" class="mb-5 py-4 rounded" style="background-color: #f4f4f4;">
+  <div class="container">
     <h2 class="fw-bold border-bottom pb-2" style="color: #594E40;">Contáctenos</h2>
     
     <div class="row mt-4">
@@ -647,8 +647,8 @@
         <div class="card h-100">
           <div class="card-body">
             <h4 style="color: #594E40;">Nuestras oficinas</h4>
-            <div class="mb-4">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.785931816786!2d-74.083905924682!3d4.638129942540608!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9a3b0f0e0e0f%3A0x1b8c3b0f0e0e0e0f!2sGeoconsultores%20Asociados!5e0!3m2!1sen!2sco!4v1620000000000!5m2!1sen!2sco" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <div class="ratio ratio-16x9 mb-4">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.785931816786!2d-74.083905924682!3d4.638129942540608!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9a3b0f0e0e0f%3A0x1b8c3b0f0e0e0e0f!2sGeoconsultores%20Asociados!5e0!3m2!1sen!2sco!4v1620000000000!5m2!1sen!2sco" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
             <ul class="list-unstyled">
               <li><i class="bi bi-geo-alt-fill me-2" style="color: #C0B59B;"></i> Cra 45 #26-85, Bogotá, Colombia</li>
@@ -667,112 +667,5 @@
         </div>
       </div>
     </div>
-  </section>
-</main>
-
-<!-- Recursos Adicionales -->
-<section class="py-5" style="background-color: #594E40; color: white;">
-  <div class="container">
-    <h2 class="fw-bold text-center mb-4">Recursos Adicionales</h2>
-    <div class="row">
-      <div class="col-md-4 mb-3">
-        <div class="card h-100">
-          <div class="card-body">
-            <h5 class="card-title" style="color: #594E40;">Documentos Técnicos</h5>
-            <ul>
-              <li><a href="#" style="color: #C0B59B;">Mapa de gradiente geotérmico SGC</a></li>
-              <li><a href="#" style="color: #C0B59B;">Guía de exploración geotérmica</a></li>
-              <li><a href="#" style="color: #C0B59B;">Estudios de prefactibilidad</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4 mb-3">
-        <div class="card h-100">
-          <div class="card-body">
-            <h5 class="card-title" style="color: #594E40;">Normatividad</h5>
-            <ul>
-              <li><a href="#" style="color: #C0B59B;">Ley 1715 de 2014</a></li>
-              <li><a href="#" style="color: #C0B59B;">Decreto 1598 de 2024</a></li>
-              <li><a href="#" style="color: #C0B59B;">Resoluciones CREG</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4 mb-3">
-        <div class="card h-100">
-          <div class="card-body">
-            <h5 class="card-title" style="color: #594E40;">Multimedia</h5>
-            <ul>
-              <li><a href="#" style="color: #C0B59B;">Video: Proceso geotérmico</a></li>
-              <li><a href="#" style="color: #C0B59B;">Galería fotográfica</a></li>
-              <li><a href="#" style="color: #C0B59B;">Webinars técnicos</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
   </div>
 </section>
-  
-
-<!-- Footer -->
-<footer class="py-5" style="background-color: #594E40; color: white;">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4 mb-4">
-        <h5>Geoconsultores Asociados</h5>
-        <p>Especialistas en geofísica aplicada con tecnología de punta para exploración del subsuelo.</p>
-        <div class="social-icons">
-          <a href="#" class="text-white me-2"><i class="bi bi-linkedin"></i></a>
-          <a href="#" class="text-white me-2"><i class="bi bi-twitter-x"></i></a>
-          <a href="#" class="text-white me-2"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="text-white me-2"><i class="bi bi-youtube"></i></a>
-        </div>
-      </div>
-      <div class="col-md-4 mb-4">
-        <h5>Métodos Geofísicos</h5>
-        <ul class="list-unstyled">
-          <li><a href="#" class="text-white">Sísmica</a></li>
-          <li><a href="#" class="text-white">Eléctrica/Electromagnética</a></li>
-          <li><a href="#" class="text-white">Magnetometría</a></li>
-          <li><a href="#" class="text-white">Gravimetría</a></li>
-          <li><a href="#" class="text-white">Georadar (GPR)</a></li>
-        </ul>
-      </div>
-      <div class="col-md-4 mb-4">
-        <h5>Certificaciones</h5>
-        <div class="d-flex flex-wrap gap-3">
-          <img src="Imagenes/certificacion-icp.png" alt="ICP" style="height: 50px;">
-          <img src="Imagenes/certificacion-iso.png" alt="ISO" style="height: 50px;">
-          <img src="Imagenes/certificacion-sgc.png" alt="SGC" style="height: 50px;">
-        </div>
-        <div class="mt-3">
-          <p class="small">Acreditados por el Servicio Geológico Colombiano para estudios geofísicos.</p>
-        </div>
-      </div>
-    </div>
-    <hr class="my-4" style="border-color: #C0B59B;">
-    <div class="row">
-      <div class="col-md-6">
-        <p class="mb-0">© 2023 Geoconsultores Asociados. Todos los derechos reservados.</p>
-      </div>
-      <div class="col-md-6 text-md-end">
-        <a href="#" class="text-white me-3">Política de privacidad</a>
-        <a href="#" class="text-white me-3">Términos de servicio</a>
-        <a href="#" class="text-white">Mapa del sitio</a>
-      </div>
-    </div>
-  </div>
-</footer>
-
-<!-- Botón WhatsApp (solo uno) -->
-<a href="https://wa.me/573057287714" target="_blank" class="whatsapp-btn">
-  <i class="bi bi-whatsapp"></i>
-</a>
-
-<!-- Scripts de Bootstrap -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-</body>
-</html>
