--- a/sig.html
+++ b/sig.html
@@ -719,4 +719,146 @@
             <h4 style="color: #2E7D32;">Consultoría</h4>
             <ul>
               <li>Diseño de metodologías</li>
-              <li
+              <li>Evaluación de sistemas</li>
+              <li>Migración de plataformas</li>
+              <li>Optimización de procesos</li>
+              <li>Gestión de datos espaciales</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contacto -->
+  <section id="contacto" class="mb-5 py-4 rounded" style="background-color: #f4f4f4;">
+    <div class="container">
+      <h2 class="fw-bold border-bottom pb-2" style="color: #2E7D32;">Contáctenos</h2>
+      
+      <div class="row mt-4">
+        <div class="col-lg-6">
+          <div class="card h-100">
+            <div class="card-body">
+              <h4 style="color: #2E7D32;">Solicite un servicio SIG</h4>
+              <form>
+                <div class="mb-3">
+                  <label for="nombre" class="form-label">Nombre completo</label>
+                  <input type="text" class="form-control" id="nombre" required>
+                </div>
+                <div class="mb-3">
+                  <label for="empresa" class="form-label">Empresa</label>
+                  <input type="text" class="form-control" id="empresa">
+                </div>
+                <div class="mb-3">
+                  <label for="email" class="form-label">Email</label>
+                  <input type="email" class="form-control" id="email" required>
+                </div>
+                <div class="mb-3">
+                  <label for="servicio" class="form-label">Servicio de interés</label>
+                  <select class="form-select" id="servicio">
+                    <option selected>Seleccione un servicio</option>
+                    <option>Proyectos SIG</option>
+                    <option>Capacitación</option>
+                    <option>Desarrollo WebGIS</option>
+                    <option>Análisis espacial</option>
+                    <option>Teledetección</option>
+                    <option>Otro</option>
+                  </select>
+                </div>
+                <div class="mb-3">
+                  <label for="mensaje" class="form-label">Describa su proyecto</label>
+                  <textarea class="form-control" id="mensaje" rows="3"></textarea>
+                </div>
+                <button type="submit" class="btn" style="background-color: #2E7D32; color: white;">Enviar solicitud</button>
+              </form>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="card h-100">
+            <div class="card-body">
+              <h4 style="color: #2E7D32;">Nuestro equipo SIG</h4>
+              <div class="ratio ratio-16x9 mb-4">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.785931816786!2d-74.083905924682!3d4.638129942540608!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9a3b0f0e0e0f%3A0x1b8c3b0f0e0e0e0f!2sGeoconsultores%20Asociados!5e0!3m2!1sen!2sco!4v1620000000000!5m2!1sen!2sco" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+              </div>
+              <ul class="list-unstyled">
+                <li><i class="bi bi-geo-alt-fill me-2" style="color: #2E7D32;"></i> Cra 45 #26-85, Bogotá, Colombia</li>
+                <li><i class="bi bi-telephone-fill me-2" style="color: #2E7D32;"></i> +57 300 123 4567</li>
+                <li><i class="bi bi-envelope-fill me-2" style="color: #2E7D32;"></i> sig@geoconsultores.com</li>
+                <li><i class="bi bi-clock-fill me-2" style="color: #2E7D32;"></i> Lunes a Viernes: 8:00 am - 5:00 pm</li>
+              </ul>
+              <hr>
+              <h5 style="color: #2E7D32;">Recursos</h5>
+              <div class="d-flex flex-wrap gap-2">
+                <a href="#" class="btn btn-outline-success"><i class="bi bi-file-earmark-pdf"></i> Catálogo SIG</a>
+                <a href="#" class="btn btn-outline-success"><i class="bi bi-file-earmark-word"></i> Formatos</a>
+                <a href="#" class="btn btn-outline-success"><i class="bi bi-file-earmark-text"></i> Guías técnicas</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</main>
+
+<!-- Footer -->
+<footer class="py-5" style="background-color: #1B5E20; color: white;">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 mb-4">
+        <h5>Geoconsultores Asociados</h5>
+        <p>Especialistas en sistemas de información geográfica aplicados a geociencias.</p>
+        <div class="social-icons">
+          <a href="#" class="text-white me-2"><i class="bi bi-linkedin"></i></a>
+          <a href="#" class="text-white me-2"><i class="bi bi-twitter-x"></i></a>
+          <a href="#" class="text-white me-2"><i class="bi bi-facebook"></i></a>
+          <a href="#" class="text-white me-2"><i class="bi bi-youtube"></i></a>
+        </div>
+      </div>
+      <div class="col-md-4 mb-4">
+        <h5>Servicios SIG</h5>
+        <ul class="list-unstyled">
+          <li><a href="#" class="text-white">Geología y Minería</a></li>
+          <li><a href="#" class="text-white">Hidrología y Ambiente</a></li>
+          <li><a href="#" class="text-white">Riesgos Naturales</a></li>
+          <li><a href="#" class="text-white">Ordenamiento Territorial</a></li>
+          <li><a href="#" class="text-white">Desarrollo WebGIS</a></li>
+        </ul>
+      </div>
+      <div class="col-md-4 mb-4">
+        <h5>Certificaciones</h5>
+        <div class="d-flex flex-wrap gap-3">
+          <img src="Imagenes/certificacion-esri.png" alt="ESRI" style="height: 50px;">
+          <img src="Imagenes/certificacion-qgis.png" alt="QGIS" style="height: 50px;">
+          <img src="Imagenes/certificacion-igac.png" alt="IGAC" style="height: 50px;">
+        </div>
+        <div class="mt-3">
+          <p class="small">Socios certificados de ESRI Colombia y desarrolladores QGIS.</p>
+        </div>
+      </div>
+    </div>
+    <hr class="my-4" style="border-color: #4CAF50;">
+    <div class="row">
+      <div class="col-md-6">
+        <p class="mb-0">© 2023 Geoconsultores Asociados. Todos los derechos reservados.</p>
+      </div>
+      <div class="col-md-6 text-md-end">
+        <a href="#" class="text-white me-3">Política de privacidad</a>
+        <a href="#" class="text-white me-3">Términos de servicio</a>
+        <a href="#" class="text-white">Mapa del sitio</a>
+      </div>
+    </div>
+  </div>
+</footer>
+
+<!-- Botón WhatsApp -->
+<a href="https://wa.me/573001234567" target="_blank" class="whatsapp-btn">
+  <i class="bi bi-whatsapp"></i>
+</a>
+
+<!-- Scripts de Bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+</body>
+</html>
