--- a/contacto.html
+++ b/contacto.html
@@ -1,68 +1,106 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contáctanos</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Eras Bold ITC', sans-serif;
-      background-color: #fff;
-      color: #594E40;
-    }
-    .banner {
-      height: 300px;
-      background: linear-gradient(to right, #594E40, #C0B59B);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-    }
-    .btn-volver {
-      background-color: #594E40;
-      color: white;
-    }
-    .btn-volver:hover {
-      background-color: #C0B59B;
-      color: #594E40;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Página de contacto para consultas, soporte y colaboraciones. ¡Escríbenos!">
+    <title>Contáctanos | [Nombre de tu Empresa/Sitio]</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Asegúrate de enlazar tu CSS principal -->
+    <style>
+        /* Estilos específicos para la página de contacto */
+        .contacto {
+            padding: 2rem;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+        .contacto h1 {
+            text-align: center;
+            color: #2c3e50;
+            margin-bottom: 2rem;
+        }
+        .contacto-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 2rem;
+        }
+        .contacto-info, .contacto-form {
+            background: #f9f9f9;
+            padding: 1.5rem;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+        .contacto-info h2, .contacto-form h2 {
+            color: #e74c3c;
+            margin-bottom: 1rem;
+        }
+        .contacto-info p, .contacto-info a {
+            color: #555;
+            line-height: 1.6;
+        }
+        .contacto-info a:hover {
+            color: #e74c3c;
+        }
+        .contacto-form input, 
+        .contacto-form textarea, 
+        .contacto-form button {
+            width: 100%;
+            padding: 0.8rem;
+            margin-bottom: 1rem;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+        }
+        .contacto-form button {
+            background: #e74c3c;
+            color: white;
+            border: none;
+            cursor: pointer;
+            font-weight: bold;
+        }
+        .contacto-form button:hover {
+            background: #c0392b;
+        }
+    </style>
 </head>
 <body>
-  <div class="banner">
-    <h1>Contáctanos</h1>
-  </div>
+    <!-- Menú de navegación (ajusta según tu estructura actual) -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="servicios.html">Servicios</a></li>
+                <li><a href="nosotros.html">Nosotros</a></li>
+                <li><a href="contactanos.html" class="active">Contáctanos</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <div class="container py-5">
-    <div class="row">
-      <div class="col-md-6 mb-4">
-        <h2>Ubicación</h2>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.914551287905!2d-74.0720922846756!3d4.710988743682147!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f99b6aab89627%3A0x578f2d11e77b928b!2sBogot%C3%A1%2C%20Colombia!5e0!3m2!1ses-419!2sus!4v1617763546123!5m2!1ses-419!2sus" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        <p class="mt-3">Correo: gcageoconsultoresasociados@gmail.com</p>
-      </div>
+    <!-- Contenido de la página de contacto -->
+    <main class="contacto">
+        <h1>Contáctanos</h1>
+        <div class="contacto-grid">
+            <section class="contacto-info">
+                <h2>Información de contacto</h2>
+                <p><strong>Email:</strong> <a href="mailto:contacto@tusitio.com">contacto@tusitio.com</a></p>
+                <p><strong>Teléfono:</strong> <a href="tel:+123456789">+1 (234) 567-89</a></p>
+                <p><strong>Dirección:</strong> Calle Ejemplo #123, Ciudad, País</p>
+                <p><strong>Horario:</strong> Lunes a Viernes, 9:00 AM - 6:00 PM</p>
+            </section>
+            <section class="contacto-form">
+                <h2>Envíanos un mensaje</h2>
+                <form action="procesar-formulario.php" method="POST">
+                    <input type="text" name="nombre" placeholder="Nombre completo" required>
+                    <input type="email" name="email" placeholder="Email" required>
+                    <input type="tel" name="telefono" placeholder="Teléfono (opcional)">
+                    <textarea name="mensaje" rows="5" placeholder="Tu mensaje..." required></textarea>
+                    <button type="submit">Enviar mensaje</button>
+                </form>
+            </section>
+        </div>
+    </main>
 
-      <div class="col-md-6">
-        <h2>Formulario de contacto</h2>
-        <form>
-          <div class="mb-3">
-            <label for="nombre" class="form-label">Nombre</label>
-            <input type="text" class="form-control" id="nombre" required>
-          </div>
-          <div class="mb-3">
-            <label for="email" class="form-label">Correo electrónico</label>
-            <input type="email" class="form-control" id="email" required>
-          </div>
-          <div class="mb-3">
-            <label for="mensaje" class="form-label">Mensaje</label>
-            <textarea class="form-control" id="mensaje" rows="4" required></textarea>
-          </div>
-          <button type="submit" class="btn btn-volver">Enviar</button>
-        </form>
-      </div>
-    </div>
-
-    <a href="index.html" class="btn btn-volver mt-5">← Volver al inicio</a>
-  </div>
+    <!-- Footer (personalízalo según tu sitio) -->
+    <footer>
+        <p>&copy; 2023 [Nombre de tu Empresa]. Todos los derechos reservados.</p>
+    </footer>
 </body>
 </html>
